--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -16,27 +17,29 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "currency-formatter": "^1.5.9",
-    "expo": "^51.0.14",
+    "expo": "51.0.21",
     "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~15.0.11",
+    "expo-camera": "15.0.14",
     "expo-constants": "~16.0.2",
     "expo-contacts": "~13.0.4",
-    "expo-image": "~1.12.12",
-    "expo-image-picker": "~15.0.5",
+    "expo-image": "1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.5.16",
-    "expo-sensors": "~13.0.8",
+    "expo-router": "3.5.18",
+    "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-credit-card-form-ui": "^1.2.5",
     "react-native-localize": "^3.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-picker": "^4.3.7",
