--- a/package.json
+++ b/package.json
@@ -33,23 +33,28 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.416.0",
     "mongoose": "^8.4.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-credit-card-form-ui": "^1.2.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-localize": "^3.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.1.3",
-    "react-native-reanimated": "3.10.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.10",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.3.3"
   },
